Fix Vercel configuration for correct directory structure
- Remove cd attendance-frontend commands since repo is already in frontend directory
- Update buildCommand and installCommand to run from current directory
- Update outputDirectory to use build folder directly

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "cd attendance-frontend && npm run build",
-  "outputDirectory": "attendance-frontend/build",
-  "installCommand": "cd attendance-frontend && npm install",
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "installCommand": "npm install",
   "framework": "create-react-app"
 }
