Enhance student management features and UI components
- Added optional fields for father's name, mother's name, and blood group in Student and Enrollment components.
- Updated EditStudent and StudentDetail components to display and manage new fields.
- Implemented attendance filtering in Students component to categorize students based on attendance performance.
- Integrated PIN authentication API for enhanced security in the application.
- Improved overall styling and user experience across various components.

--- a/env.example
+++ b/env.example
@@ -1,1 +1,5 @@
 REACT_APP_API_URL=http://localhost:5000/api
+
+# ID Card Signature URLs (Optional - for ID card printing)
+# REACT_APP_CEO_SIGNATURE_URL=https://your-domain.com/signatures/ceo-signature.png
+# REACT_APP_COURSE_DIRECTOR_SIGNATURE_URL=https://your-domain.com/signatures/course-director-signature.png
