--- a/package.json
+++ b/package.json
@@ -3,28 +3,29 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "@hookform/resolvers": "^3.3.1",
+    "@react-pdf/renderer": "^4.3.1",
+    "@types/moment": "^2.13.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "axios": "^1.5.0",
-    "react-router-dom": "^6.15.0",
     "@types/react-router-dom": "^5.3.3",
-    "face-api.js": "^0.22.2",
-    "moment": "^2.29.4",
-    "@types/moment": "^2.13.0",
-    "recharts": "^2.8.0",
-    "react-toastify": "^9.1.3",
-    "lucide-react": "^0.263.1",
+    "axios": "^1.5.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^1.14.0",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.263.1",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
-    "@hookform/resolvers": "^3.3.1",
-    "zod": "^3.22.2",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
+    "tailwind-merge": "^1.14.0",
+    "typescript": "^4.9.5",
+    "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
   "scripts": {
@@ -54,14 +55,14 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
     "@types/node": "^20.6.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.49.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
   }
 }
