--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@hookform/resolvers": "^3.3.1",
     "@react-pdf/renderer": "^4.3.1",
     "@types/moment": "^2.13.0",
